--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-input-mask": "^2.0.4",
+    "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2",
