--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.6",
     "sweetalert": "^2.1.2",
     "swiper": "^8.4.4",
     "tw-elements": "^1.0.0-alpha12"
