--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://p7criativo.com.br/",
+  "homepage": "https://IsaqueMedeiros.github.io/LandingP7",
   "name": "landing",
   "private": true,
   "version": "1.0",
