teste aws  amplify

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://IsaqueMedeiros.github.io/LandingP7/",
+  "homepage": "https://main.d2v0oqthrxrgdr.amplifyapp.com/",
   "name": "landing",
   "private": true,
   "version": "1.0",
