--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.4",
+    "aws-amplify": "^5.0.15",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.8",
